--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.4.0",
     "expo": "~49.0.5",
